--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ГОSYS - Система за Групови отговорници</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -218,4 +219,5 @@
     loadData();
   </script>
 </body>
+
 </html>
