--- a/index.html
+++ b/index.html
@@ -3,24 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ГОSYS - Система за Групови отговорници</title>
+  <title>ГОSYS - Система за Групови отговорници на ВСУ „Черноризец Храбър“</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
+    /* === RESET === */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: "Segoe UI", sans-serif;
-      margin: 0;
       background-color: #f7f7f9;
-      color: #05440d;
+      color: #333;
+      overflow-x: hidden;
+      opacity: 0;
+      transition: opacity 1.5s ease;
+    }
+    body.loaded { opacity: 1; }
+
+    /* === SPLASH INTRO === */
+    #splash {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100vh;
+      background-color: #2b2d42;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+      z-index: 1000;
+      animation: fadeOut 1.5s ease forwards;
+      animation-delay: 2.7s; /* след 2.7 секунди се скрива */
     }
 
-    /* ===== HEADER ===== */
+    #splash img {
+      width: 160px;
+      height: 160px;
+      opacity: 0;
+      transform: scale(0.6);
+      animation: logoAppear 2s ease forwards;
+    }
+
+    #splash h1 {
+      font-size: 1.8rem;
+      margin-top: 1rem;
+      opacity: 0;
+      animation: textFade 2s ease forwards;
+      animation-delay: 1.2s;
+    }
+
+    @keyframes logoAppear {
+      0% { opacity: 0; transform: scale(0.6) rotate(-10deg); }
+      60% { opacity: 1; transform: scale(1.1) rotate(5deg); }
+      100% { opacity: 1; transform: scale(1) rotate(0deg); }
+    }
+
+    @keyframes textFade {
+      from { opacity: 0; transform: translateY(15px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+
+    /* === HEADER === */
     .header {
-      background-color: #103b08;
+      background-color: #2b2d42;
       color: white;
       padding: 1.5rem 0;
       text-align: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-      animation: fadeIn 0.8s ease-in-out;
+      position: relative;
+      z-index: 10;
     }
 
     .header-content {
@@ -31,15 +84,20 @@
       flex-wrap: wrap;
       max-width: 900px;
       margin: 0 auto;
+      opacity: 0;
+      transform: translateY(-10px);
+      animation: headerFade 1s ease forwards;
+      animation-delay: 3s; /* след като изчезне splash */
     }
 
     .logo {
-      width: 70px;
-      height: 70px;
+      width: 60px;
+      height: 60px;
       object-fit: contain;
       border-radius: 10px;
       background-color: white;
       padding: 5px;
+      transition: transform 0.4s ease;
     }
 
     .header-text h1 {
@@ -55,12 +113,11 @@
       opacity: 0.85;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
+    @keyframes headerFade {
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* ===== MAIN ===== */
+    /* === MAIN === */
     main {
       max-width: 600px;
       margin: 2rem auto;
@@ -68,6 +125,14 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       padding: 2rem;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: mainFade 1.2s ease forwards;
+      animation-delay: 3.3s;
+    }
+
+    @keyframes mainFade {
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h2 {
@@ -83,6 +148,12 @@
       border-radius: 6px;
       border: 1px solid #ccc;
       font-size: 1rem;
+      transition: all 0.3s ease;
+    }
+
+    select:hover {
+      border-color: #2b2d42;
+      box-shadow: 0 0 4px rgba(43, 45, 66, 0.2);
     }
 
     .info-box {
@@ -103,14 +174,35 @@
       padding: 1rem;
       color: #888;
       font-size: 0.9rem;
+      opacity: 0;
+      animation: footerFade 1.5s ease forwards;
+      animation-delay: 3.5s;
     }
+
+    @keyframes footerFade {
+      to { opacity: 1; }
+    }
+
+    a {
+      color: #2b2d42;
+      text-decoration: none;
+    }
+
+    a:hover { text-decoration: underline; }
   </style>
 </head>
+
 <body>
+  <!-- SPLASH SCREEN -->
+  <div id="splash">
+    <img src="logo.png" alt="ГОSYS Лого">
+    <h1>ГОSYS</h1>
+  </div>
+
   <!-- HEADER -->
   <header class="header">
     <div class="header-content">
-      <img src="https://iili.io/Kr27LfR.md.png" alt="ГОSYS Лого" class="logo">
+      <img src="logo.png" alt="ГОSYS Лого" class="logo">
       <div class="header-text">
         <h1>ГОSYS</h1>
         <p>Система за Групови отговорници на ВСУ „Черноризец Храбър“</p>
@@ -122,17 +214,9 @@
   <main>
     <h2>Избери специалност, курс и форма на обучение</h2>
 
-    <select id="specialnost">
-      <option value="">Избери специалност</option>
-    </select>
-
-    <select id="kurs">
-      <option value="">Избери курс</option>
-    </select>
-
-    <select id="forma">
-      <option value="">Избери форма на обучение</option>
-    </select>
+    <select id="specialnost"><option value="">Избери специалност</option></select>
+    <select id="kurs"><option value="">Избери курс</option></select>
+    <select id="forma"><option value="">Избери форма на обучение</option></select>
 
     <div id="info" class="info-box">
       Моля, избери филтри, за да видиш отговорника.
@@ -141,17 +225,19 @@
 
   <!-- FOOTER -->
   <footer>
-    © 2025 ГОSYS — Студентски съвет на ВСУ. Всички права запазени.
+    © 2025 ГОSYS — Студентски съвет на ВСУ „Черноризец Храбър“. Всички права запазени.
   </footer>
 
   <!-- SCRIPT -->
   <script>
-    // Линк към публикуваната Google Sheets таблица (CSV)
+    // Fade-in след зареждане
+    window.addEventListener('load', () => document.body.classList.add('loaded'));
+
     const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vS4yyXljRnqBEDZfV5sCR4gSFusaJXQxQBJ-sw4kK8sE9uy8mjqkkY-OAGraeKUGlxiduVWpQp6k_Nn/pub?gid=1163872706&single=true&output=csv";
 
-    const specialnostSelect = document.getElementById("specialnost");
-    const kursSelect = document.getElementById("kurs");
-    const formaSelect = document.getElementById("forma");
+    const selSpec = document.getElementById("specialnost");
+    const selKurs = document.getElementById("kurs");
+    const selForma = document.getElementById("forma");
     const infoBox = document.getElementById("info");
 
     let data = [];
@@ -161,14 +247,12 @@
         const response = await fetch(sheetURL);
         const text = await response.text();
         const rows = text.split("\n").map(r => r.split(","));
-
         const headers = rows[0].map(h => h.trim().toLowerCase());
         data = rows.slice(1).map(row => {
           const obj = {};
           headers.forEach((h, i) => obj[h] = row[i] ? row[i].trim() : "");
           return obj;
         });
-
         populateDropdowns();
       } catch (error) {
         infoBox.textContent = "⚠️ Неуспешно зареждане на данни от Google Sheets.";
@@ -181,15 +265,15 @@
       const kursove = [...new Set(data.map(d => d.kurs))].filter(v => v);
       const formi = [...new Set(data.map(d => d.forma))].filter(v => v);
 
-      specialnosti.forEach(s => specialnostSelect.innerHTML += `<option value="${s}">${s}</option>`);
-      kursove.forEach(k => kursSelect.innerHTML += `<option value="${k}">${k}</option>`);
-      formi.forEach(f => formaSelect.innerHTML += `<option value="${f}">${f}</option>`);
+      specialnosti.forEach(s => selSpec.innerHTML += `<option value="${s}">${s}</option>`);
+      kursove.forEach(k => selKurs.innerHTML += `<option value="${k}">${k}</option>`);
+      formi.forEach(f => selForma.innerHTML += `<option value="${f}">${f}</option>`);
     }
 
     function updateInfo() {
-      const s = specialnostSelect.value;
-      const k = kursSelect.value;
-      const f = formaSelect.value;
+      const s = selSpec.value;
+      const k = selKurs.value;
+      const f = selForma.value;
 
       if (!s || !k || !f) {
         infoBox.innerHTML = "Моля, избери филтри, за да видиш отговорника.";
@@ -204,7 +288,7 @@
         infoBox.innerHTML = `
           <p><strong>Отговорник:</strong> ${match.ime}</p>
           <p><strong>Email:</strong> <a href="mailto:${match.email}">${match.email}</a></p>
-          <p><strong>Телефон:</strong> ${match.tel}</p>
+          <p><strong>Телефон:</strong> <a href="tel:${match.tel}">${match.tel}</a></p>
           <p>${match.note || ""}</p>
         `;
       } else {
@@ -212,12 +296,8 @@
       }
     }
 
-    [specialnostSelect, kursSelect, formaSelect].forEach(sel =>
-      sel.addEventListener("change", updateInfo)
-    );
-
+    [selSpec, selKurs, selForma].forEach(sel => sel.addEventListener("change", updateInfo));
     loadData();
   </script>
 </body>
-
 </html>
