--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       font-family: "Segoe UI", sans-serif;
       background-color: #f7f7f9;
-      color: #333;
+      color: #09310e;
       overflow-x: hidden;
       opacity: 0;
       transition: opacity 1.5s ease;
@@ -23,7 +23,7 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100vh;
-      background-color: #2b2d42;
+      background-color: #0a2c13;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -35,8 +35,8 @@
     }
 
     #splash img {
-      width: 160px;
-      height: 160px;
+      width: 480px;
+      height: 400px;
       opacity: 0;
       transform: scale(0.6);
       animation: logoAppear 2s ease forwards;
@@ -67,7 +67,7 @@
 
     /* === HEADER === */
     .header {
-      background-color: #2b2d42;
+      background-color: #0e420e;
       color: white;
       padding: 1.5rem 0;
       text-align: center;
@@ -137,7 +137,7 @@
 
     h2 {
       text-align: center;
-      color: #2b2d42;
+      color: #0e420e;
       margin-bottom: 1rem;
     }
 
@@ -152,7 +152,7 @@
     }
 
     select:hover {
-      border-color: #2b2d42;
+      border-color: #0f380e;
       box-shadow: 0 0 4px rgba(43, 45, 66, 0.2);
     }
 
@@ -160,7 +160,7 @@
       margin-top: 1rem;
       padding: 1rem;
       background-color: #edf2f4;
-      border-left: 4px solid #2b2d42;
+      border-left: 4px solid #0e420e;
       border-radius: 6px;
       text-align: center;
     }
@@ -184,7 +184,7 @@
     }
 
     a {
-      color: #2b2d42;
+      color: #0e420e;
       text-decoration: none;
     }
 
